<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral10"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/previewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/preview_textview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/pizzaImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pizzaImageView"
        android:layout_width="168dp"
        android:layout_height="163dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/styleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderPageTextView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/styleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/styles_textview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/styleSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/styleSpinner"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_margin="0dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/typesTextView"
        app:layout_constraintBottom_toTopOf="@+id/typesTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/typesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/types_textview"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/styleSpinner"
        app:layout_constraintBottom_toTopOf="@+id/typesSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/typesSpinner"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_margin="0dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/typesTextView"
        app:layout_constraintBottom_toTopOf="@+id/sizesTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sizesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/sizes_textview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sizeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_margin="0dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/toppings_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/toppings_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/toppings_textview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/toppingsListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/toppingsListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@+id/addPizzaButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addPizzaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/addPizza_textview"
        app:layout_constraintBottom_toTopOf="@+id/reviewOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reviewOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/viewOrder_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/orderPageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/orderPage_textview"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/previewTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>